# mpr-thing

./: .gitignore  LICENSE  MANIFEST.in  README.md  mpr-thing  mpr-thing.code-workspace  pyproject.toml  requirements.txt  setup.cfg
mpr_thing/: base_commands.py  board.py  catcher.py  commands.py  local_commands.py  mpr_thing.py  remote_commands.py
mpr_thing/board/: .pylintrc  cmd_helper.py
src/mpr_thing/: base_commands.py  board.py  catcher.py  colour.py  mpr_thing.py  mpremote_path.py  pathfun.py  paths.py  remote_commands.py  remote_path.py
src/mpr_thing/board/: cmd_helper.py  ruff.toml
typings/mpremote/: console.pyi  main.pyi  repl.pyi  transport.pyi  transport_serial.pyi
