[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mpr-thing"
description = "Enhance mpremote tool."
authors = [{name="glenn20", email = "6965319+glenn20@users.noreply.github.com"}]
urls = {Homepage = "https://github.com/glenn20/mpr-thing"}
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[tool.hatch.version]
path = "src/mpr_thing/__init__.py"

[project.scripts]
mpr-thing = "mpr_thing.mpr_thing:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mpr_thing"]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]
