[metadata]
name = mpr_thing
version = 0.0.1
author = Glenn Moloney
author_email = glenn.moloney@gmail.com
description = Enhance mpremote tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glenn20/mpr-thing
project_urls =
    Bug Tracker = https://github.com/glenn20/mpr-thing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mpr_thing
python_requires = >= 3.4
install_requires =
    mpremote >= 0.0.4

[options.entry_points]
console_scripts =
  mpr-thing = mpr_thing.mpr_thing:main


[flake8]
# E123: closing bracket does not match indentation of opening bracket's line
# E221: multiple spaces before operator
# E241: multiple spaces after ","
# E266: too many leading '#' for block comment
# E401: multiple imports on one line
# E701: multiple statements on one line
# E702: multiple statements on one line
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E123,E221,E241,E401,E701,W503,W504
max-complexity = 10

[mypy]
strict = True
warn_unused_ignores = True
warn_return_any = True
disallow_untyped_calls = False
files = mpr_thing/*.py
